--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>AllenGuerta - Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -113,8 +113,8 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p class="subtitle">Software Developer</p>
+        <h1>Allen Guerta</h1>
+        <p class="subtitle">Artist</p>
         <div class="nav-buttons">
             <a href="page1.html" class="nav-button">Page 1</a>
             <a href="page2.html" class="nav-button">Page 2</a>
