--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Allen Guerta - Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -113,7 +113,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Allen Guerta</h1>
         <p class="subtitle">Software Developer</p>
         <div class="nav-buttons">
             <a href="page1.html" class="nav-button">Page 1</a>
@@ -164,7 +164,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Your Name. All rights reserved.</p>
+        <p>© 2024 Allen Guerta. All rights reserved.</p>
     </footer>
 </body>
 </html> 
