--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         <h1>Allen Guerta</h1>
         <p class="subtitle">Artist</p>
         <div class="nav-buttons">
-            <a href="page1.html" class="nav-button">Page 1</a>
-            <a href="page2.html" class="nav-button">Page 2</a>
-            <a href="page3.html" class="nav-button">Page 3</a>
+            <a href="page1.html" class="nav-button">Gallery</a>
+            <a href="page2.html" class="nav-button">Artwork</a>
+            <a href="page3.html" class="nav-button">Contact</a>
         </div>
     </header>
 
@@ -143,9 +143,9 @@
         <section class="section">
             <h2>About Me</h2>
             <p>
-                Welcome to my portfolio! I'm a passionate software developer with expertise in 
-                [your skills here]. I love building things that live on the internet and solving 
-                complex problems through code.
+                Welcome to my portfolio! I'm a passionate artist specializing in 
+                [your art forms/styles here]. I love creating [describe your art] 
+                and expressing [your artistic vision].
             </p>
         </section>
 
@@ -173,9 +173,9 @@
         <section class="section">
             <h2>Contact</h2>
             <div class="contact-links">
-                <a href="https://github.com/yourusername">GitHub</a>
-                <a href="https://linkedin.com/in/yourusername">LinkedIn</a>
-                <a href="mailto:your.email@example.com">Email</a>
+                <a href="https://github.com/[your-actual-username]">GitHub</a>
+                <a href="https://linkedin.com/in/[your-actual-username]">LinkedIn</a>
+                <a href="mailto:[your-actual-email]">Email</a>
             </div>
         </section>
     </main>
